Fix: sign-in button appearance on mobile (#20)

--- a/client/passwordless.css
+++ b/client/passwordless.css
@@ -34,6 +34,9 @@
   border: 2px solid var(--passwordless-primary);
   min-height: 2rem;
 }
+.passwordless-button-sign-in {
+  width: 18rem;
+}
 
 .passwordless-button:hover,
 .passwordless-button:focus {
@@ -184,9 +187,8 @@
 }
 
 .passwordless-flex-vertical-buttons {
-  align-items: stretch;
+  align-items: center;
   flex-direction: column;
-  padding: 0px 70px;
 }
 
 .passwordless-grid {
